$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-16 (opened November 9, 20109

	* prc: Cajo ter Braak wrote new code for more direct
	implementation of PRC. This drops formula interface and directly
	finds model matrices avoiding aliased terms.
	
Version 1.18-15 (closed November 9, 2010)

	* procrustes: 'translation' needs to take into account 'scale',
	although Mardia et al. omit it. Reported, analysed and fix
	suggested by Christian Dudel (Bochum). 

	* fitspecaccum: uses now new SS-models for species-area
	relationship and several of standard SS-models for
	nls(). Placeholders for documentation added. Has a plot()
	function. 

	* Self-starting nls() models for species-area relationship: added
	Gitay and Lomolino models from Dengler 2009 (J Biogeog 36,
	728-744). Some more should be added, but these were among the best
	in Dengler's simulation. The starting values of the Lomolino model
	(SSlomolino) need work, as do several other candidate models. The
	purpose is to use these also in fitspecaccum(). 

	* rda: the scaling 'const' can now be a vector of two items: the
	first is used for species and the second for sites. This allows
	compatibility with Canoco 3.x (but Canoco 4 changed scaling): if
	'mod' is an rda() result, and 'nr' is the number of rows in data,
	then "scaling = -2, const = c(sqrt(nr-1), sqrt(nr))" in scores(),
	summary() or plot() will use default scaling of Canoco 3.x. Help
	page now points to decision vignette explaining scaling and
	'const' (and the vignette needs updating).

	* prc: coefficients folded in a wrong way. Diagnosed, reported and
	fixed by Cajo ter Braak. CtB also fixed the scaling of species
	scores and coefficients to be more consistent with Canoco and
	common standards. The function now ignores user settings of
	contrasts and will always use treatment contrasts. Cajo ter Braak
	is now recognized as a co-author of the function.

	* nestednodf: breaks ties in column and row totals by row sums and