@@ -4,6 +4,9 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.18-16 (opened November 9, 20109
 
+	* eigenvals: added a method for "pcnm" and docs discuss handling
+	negative eigenvalues in summary.eigenvals().
+
 	* prc: Cajo ter Braak wrote new code for more direct
 	implementation of PRC. This drops formula interface and directly
 	finds model matrices avoiding aliased terms.
